# SatanyaBot

./: .env.example  .gitignore  .qovery.yml  Dockerfile  README.md  apis_commands.py  bye_list.txt  config.py  general_commands.py  hello_list.txt  keep_alive.py  main.py  owner.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
cogs/: anime.py  apis.py  apis_commands.py  error_handler.py  funny.py  general.py  general_commands.py  help.py  ia.py  img.py  jishaku.py  jsk.py  music.py  owner.py  reddit.py  rol.py  utils.py
utils/: bot.py  traceback.py
