[tool.poetry]
name = "satanyabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
jsons = "^1.3.1"
flask = "^1.1.2"
praw = "^7.2.0"
youtube_dl = "^2021.4.1"
wavelink = "^0.9.9"
TextToOwO = "^2.0.1"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
